applications/whoami/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    acme.kubernetes.io/debug: "true"
    acme.kubernetes.io/dns: dns_aws
    acme.kubernetes.io/enable: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - hosts:
      - whoami.k3s.convalesco.org
      secretName: whoami-ssl-certificate
  rules:
  - host: whoami.k3s.convalesco.org
    http:
      paths:
      - path: /
        backend:
          service:
            name: whoami-service
            port:
              number: 80
        pathType: ImplementationSpecific
